@@ -5,6 +5,7 @@
   use -p with rcp/scp (USC)
   several fixes around .pbs_spool usage (USC)
   don't create "kept" stdout/err files ugo+rw (avoid insane umask) (USC)
+  qsub -V shouldn't clobber qsub's environ (USC)
 
 2.0.0p4
 
